--- a/index.html
+++ b/index.html
@@ -13,12 +13,26 @@
 
     body {
       font-family: 'Sarabun', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       margin: 0;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
+      position: relative;
+      z-index: 0;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('bg.webp') center/cover no-repeat;
+      filter: blur(10px);
+      z-index: -1;
+      opacity: 0.5;
     }
 
     .container {
