--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       align-items: center;
       position: relative;
       z-index: 0;
+      overflow: hidden;
     }
 
     body::before {
@@ -27,16 +28,19 @@
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('bg.webp') center/cover no-repeat;
-      filter: blur(10px);
+      width: 100vw;
+      height: 100vh;
+      background-image: url('bg.webp');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      filter: blur(8px);
+      opacity: 0.8;
       z-index: -1;
-      opacity: 0.5;
     }
 
     .container {
-      background: white;
+      background: rgba(255, 255, 255, 0.9);
       padding: 30px;
       border-radius: 20px;
       width: 90%;
@@ -93,6 +97,13 @@
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(30px); }
       to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 600px) {
+      body::before {
+        filter: blur(6px);
+        opacity: 1;
+      }
     }
   </style>
 </head>
