--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       justify-content: center;
       align-items: center;
       position: relative;
-      z-index: 0;
       overflow: hidden;
+      background: linear-gradient(135deg, #667eea, #764ba2);
     }
 
     body::before {
@@ -34,101 +34,141 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      filter: blur(8px);
-      opacity: 0.8;
+      filter: blur(15px) brightness(0.7);
       z-index: -1;
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.95);
-      padding: 30px;
+      background: rgba(255, 255, 255, 0.15);
       border-radius: 20px;
+      padding: 30px 40px;
       width: 90%;
       max-width: 420px;
-      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      border: 1px solid rgba(255, 255, 255, 0.18);
       text-align: center;
-      animation: fadeIn 0.8s ease;
-      transform: scale(1);
-      transition: transform 0.2s ease;
+      color: white;
+      user-select: none;
       position: relative;
-      overflow: visible;
-    }
-
-    .container:hover {
-      transform: scale(1.02);
     }
 
     h2 {
-      color: #2c3e50;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
+      font-weight: 600;
+      font-size: 1.8rem;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.4);
     }
 
     input[type="number"] {
       width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      font-size: 16px;
+      padding: 14px 15px;
+      margin: 12px 0;
+      border: none;
+      border-radius: 12px;
+      font-size: 1.1rem;
+      outline: none;
+      background: rgba(255, 255, 255, 0.25);
+      color: white;
+      box-shadow: inset 0 0 8px rgba(255,255,255,0.15);
+      transition: background 0.3s ease;
+      user-select: text;
+    }
+
+    input[type="number"]::placeholder {
+      color: rgba(255, 255, 255, 0.7);
+    }
+
+    input[type="number"]:focus {
+      background: rgba(255, 255, 255, 0.45);
+      box-shadow: 0 0 12px 2px rgba(255,255,255,0.6);
     }
 
     button {
+      position: relative;
+      overflow: hidden;
       width: 100%;
-      padding: 14px;
-      font-size: 16px;
-      background: #007bff;
-      color: white;
+      padding: 16px 0;
+      margin-top: 18px;
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: #fff;
+      background: linear-gradient(45deg, #667eea, #764ba2);
       border: none;
-      border-radius: 10px;
+      border-radius: 15px;
       cursor: pointer;
-      transition: background 0.3s ease;
-      margin-top: 15px;
+      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.6);
       user-select: none;
+      transition: background 0.3s ease, box-shadow 0.3s ease;
+      outline: none;
     }
 
     button:hover {
-      background: #0056b3;
+      background: linear-gradient(45deg, #5563d6, #6b3ea3);
+      box-shadow: 0 6px 20px rgba(85, 99, 214, 0.8);
+    }
+
+    button:active::after {
+      transform: scale(4);
+      opacity: 0.3;
+      transition: 0s;
+    }
+
+    button::after {
+      content: "";
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 100px;
+      height: 100px;
+      background: rgba(255, 255, 255, 0.3);
+      border-radius: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      opacity: 0;
+      pointer-events: none;
+      transition: transform 0.5s ease, opacity 1s ease;
+      z-index: 0;
     }
 
     #fullscreen-btn {
-      background: #28a745;
-      margin-top: 10px;
+      background: linear-gradient(45deg, #28a745, #218838);
+      box-shadow: 0 4px 15px rgba(40, 167, 69, 0.6);
+      margin-top: 12px;
     }
 
     #fullscreen-btn:hover {
-      background: #1e7e34;
+      background: linear-gradient(45deg, #218838, #1c6c2c);
+      box-shadow: 0 6px 20px rgba(33, 136, 56, 0.8);
     }
 
     #exitfullscreen-btn {
-      background: #dc3545;
-      margin-top: 10px;
+      background: linear-gradient(45deg, #dc3545, #b02a37);
+      box-shadow: 0 4px 15px rgba(220, 53, 69, 0.6);
+      margin-top: 12px;
     }
 
     #exitfullscreen-btn:hover {
-      background: #a71d2a;
+      background: linear-gradient(45deg, #b02a37, #801f29);
+      box-shadow: 0 6px 20px rgba(176, 42, 55, 0.8);
     }
 
     #result {
-      margin-top: 20px;
-      font-weight: bold;
-      color: #28a745;
-      font-size: 2.5rem;
+      margin-top: 28px;
+      font-weight: 700;
+      font-size: 2.8rem;
+      color: #ffd700;
+      text-shadow: 0 0 10px #ffd700, 0 0 20px #ffa500;
       user-select: text;
-      /* ให้แสดงผลใหญ่ตลอด */
-      opacity: 1;
-      transform: scale(1.6);
-      transition: none;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
+      transition: transform 0.3s ease;
     }
 
     @media (max-width: 600px) {
-      body::before {
-        filter: blur(6px);
-        opacity: 1;
+      .container {
+        padding: 25px 25px;
+      }
+      #result {
+        font-size: 2.2rem;
       }
     }
   </style>
@@ -159,6 +199,10 @@
 
       const result = ((sku / 12 + mu / 34) / (2 * days)).toFixed(8);
       resultEl.innerText = `ผลลัพธ์: ${result}`;
+      resultEl.style.transform = 'scale(1.2)';
+      setTimeout(() => {
+        resultEl.style.transform = 'scale(1)';
+      }, 300);
     }
 
     function openFullscreen() {
