--- a/index.html
+++ b/index.html
@@ -156,11 +156,17 @@
     #result {
       margin-top: 28px;
       font-weight: 700;
-      font-size: 2.8rem;
+      font-size: 1.8rem;
       color: #ffd700;
-      text-shadow: 0 0 10px #ffd700, 0 0 20px #ffa500;
+      text-shadow: 0 0 8px #ffd700, 0 0 15px #ffa500;
+      background: rgba(0,0,0,0.3);
+      padding: 12px 18px;
+      border-radius: 12px;
       user-select: text;
+      max-width: 100%;
+      word-break: break-word;
       transition: transform 0.3s ease;
+      display: inline-block;
     }
 
     @media (max-width: 600px) {
@@ -168,7 +174,7 @@
         padding: 25px 25px;
       }
       #result {
-        font-size: 2.2rem;
+        font-size: 1.4rem;
       }
     }
   </style>
@@ -198,8 +204,8 @@
       }
 
       const result = ((sku / 12 + mu / 34) / (2 * days)).toFixed(8);
-      resultEl.innerText = `ผลลัพธ์: ${result}`;
-      resultEl.style.transform = 'scale(1.2)';
+      resultEl.innerText = `เฉลี่ยออเดอร์ต่อวัน: ${result}`;
+      resultEl.style.transform = 'scale(1.1)';
       setTimeout(() => {
         resultEl.style.transform = 'scale(1)';
       }, 300);
