--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #667eea, #764ba2);
+      background: linear-gradient(135deg, #323232, #1a1a1a);
       color: white;
       user-select: none;
+      overflow: hidden;
     }
 
     body::before {
@@ -34,19 +35,19 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      filter: blur(15px) brightness(0.7);
+      filter: blur(6px) brightness(0.5);
       z-index: -1;
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.15);
+      background: rgba(255, 255, 255, 0.1);
       border-radius: 20px;
       padding: 30px 40px;
       width: 90%;
       max-width: 420px;
       box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-      backdrop-filter: blur(15px);
-      -webkit-backdrop-filter: blur(15px);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
       border: 1px solid rgba(255, 255, 255, 0.18);
       text-align: center;
       user-select: text;
@@ -107,30 +108,6 @@
       box-shadow: 0 6px 20px rgba(85, 99, 214, 0.8);
     }
 
-    #fullscreen-btn, #exitfullscreen-btn {
-      margin-top: 12px;
-    }
-
-    #fullscreen-btn {
-      background: linear-gradient(45deg, #28a745, #218838);
-      box-shadow: 0 4px 15px rgba(40, 167, 69, 0.6);
-    }
-
-    #fullscreen-btn:hover {
-      background: linear-gradient(45deg, #218838, #1c6c2c);
-      box-shadow: 0 6px 20px rgba(33, 136, 56, 0.8);
-    }
-
-    #exitfullscreen-btn {
-      background: linear-gradient(45deg, #dc3545, #b02a37);
-      box-shadow: 0 4px 15px rgba(220, 53, 69, 0.6);
-    }
-
-    #exitfullscreen-btn:hover {
-      background: linear-gradient(45deg, #b02a37, #801f29);
-      box-shadow: 0 6px 20px rgba(176, 42, 55, 0.8);
-    }
-
     #result {
       margin-top: 28px;
       font-weight: 700;
@@ -169,14 +146,11 @@
     <input id="mu" type="number" placeholder="กรอก MU" class="inputs" />
     <input id="days" type="number" placeholder="จำนวนวันทำงาน" class="inputs" />
     <button onclick="calculate()" class="inputs">คำนวณ</button>
-    <button id="fullscreen-btn" onclick="openFullscreen()">เปิดเต็มจอ</button>
-    <button id="exitfullscreen-btn" onclick="closeFullscreen()">ออกจากเต็มจอ</button>
     <h3 id="result" onclick="toggleView()"></h3>
   </div>
 
   <script>
     let fullResult = '';
-    let shortResult = '';
     let showingShort = false;
     let showOnlyResult = false;
 
@@ -193,7 +167,6 @@
 
       const result = ((sku / 12 + mu / 34) / (2 * days)).toFixed(8);
       fullResult = `เฉลี่ยออเดอร์ต่อวัน: ${result}`;
-      shortResult = `${result}`;
 
       resultEl.innerText = fullResult;
       showingShort = false;
@@ -223,33 +196,12 @@
         resultEl.innerText = fullResult;
         showOnlyResult = false;
       } else {
-        // ซ่อน inputs + แสดงผลลัพธ์แค่ตัวเลข
+        // ซ่อน inputs + แสดงผลลัพธ์เต็มแค่ข้อความเดียว
         document.querySelectorAll('.inputs').forEach(el => {
           el.classList.add('hidden');
         });
-        resultEl.innerText = shortResult;
+        resultEl.innerText = fullResult;
         showOnlyResult = true;
-      }
-    }
-
-    function openFullscreen() {
-      const elem = document.documentElement;
-      if (elem.requestFullscreen) {
-        elem.requestFullscreen();
-      } else if (elem.webkitRequestFullscreen) {
-        elem.webkitRequestFullscreen();
-      } else if (elem.msRequestFullscreen) {
-        elem.msRequestFullscreen();
-      }
-    }
-
-    function closeFullscreen() {
-      if (document.exitFullscreen) {
-        document.exitFullscreen();
-      } else if (document.webkitExitFullscreen) {
-        document.webkitExitFullscreen();
-      } else if (document.msExitFullscreen) {
-        document.msExitFullscreen();
       }
     }
   </script>
