--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>เฉลี่ยออเดอร์ต่อวัน</title>
+  <title>คำนวณออเดอร์เฉลี่ย</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Sarabun&display=swap');
 
@@ -36,14 +36,45 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      filter: blur(4px) brightness(0.5); /* เบลอน้อยลง + มืด */
+      filter: blur(4px) brightness(0.5);
       z-index: -1;
     }
 
+    .container {
+      background: rgba(255, 255, 255, 0.95);
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+      text-align: center;
+      width: 90%;
+      max-width: 420px;
+      transition: transform 0.2s ease;
+    }
+
+    .container input, .container button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 12px;
+      font-size: 16px;
+      border-radius: 10px;
+    }
+
+    .container button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    .container button:hover {
+      background-color: #0056b3;
+    }
+
     .result-display {
+      display: none;
       color: #28a745;
       text-align: center;
-      font-size: 8vw; /* ~50% ของจอมือถือแนวนอน */
+      font-size: 8vw;
       font-weight: bold;
       animation: popIn 0.6s ease, glow 1.5s ease-in-out;
     }
@@ -57,10 +88,6 @@
     @keyframes glow {
       0%, 100% { text-shadow: 0 0 0px rgba(40,167,69,0); }
       50% { text-shadow: 0 0 30px rgba(40,167,69,0.7); }
-    }
-
-    .hidden {
-      display: none;
     }
 
     @media screen and (orientation: portrait) {
@@ -81,49 +108,44 @@
   </style>
 </head>
 <body>
-  <div class="result-display" id="result" onclick="showResultOnly()">เฉลี่ยออเดอร์ต่อวัน</div>
+  <div class="container" id="inputContainer">
+    <h2>คำนวณออเดอร์เฉลี่ยต่อวัน</h2>
+    <input id="sku" type="number" placeholder="กรอก SKU" />
+    <input id="mu" type="number" placeholder="กรอก MU" />
+    <input id="days" type="number" placeholder="จำนวนวันทำงาน" />
+    <button onclick="calculate()">คำนวณ</button>
+  </div>
 
-  <!-- Confetti Script -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+  <div class="result-display" id="resultDisplay"></div>
+
   <script>
-    const resultBox = document.getElementById("result");
-    const resultText = "เฉลี่ยออเดอร์ต่อวัน: 123.456"; // เปลี่ยนค่าตรงนี้ได้ตามจริง
+    function calculate() {
+      const sku = parseFloat(document.getElementById('sku').value);
+      const mu = parseFloat(document.getElementById('mu').value);
+      const days = parseFloat(document.getElementById('days').value);
 
-    function showResultOnly() {
-      // แสดงข้อความผลลัพธ์
-      resultBox.textContent = resultText;
-      resultBox.style.animation = "popIn 0.6s ease, glow 1.5s ease-in-out";
+      if (isNaN(sku) || isNaN(mu) || isNaN(days) || days <= 0) {
+        alert('กรุณากรอกข้อมูลให้ครบและถูกต้อง');
+        return;
+      }
 
-      // เต็มหน้าจอ
+      const result = ((sku / 12 + mu / 34) / (2 * days)).toFixed(8);
+
+      // ซ่อน input, แสดงผลลัพธ์
+      document.getElementById('inputContainer').style.display = 'none';
+      const resultBox = document.getElementById('resultDisplay');
+      resultBox.textContent = `เฉลี่ยออเดอร์ต่อวัน: ${result}`;
+      resultBox.style.display = 'block';
+
+      // ขอ fullscreen
       if (document.documentElement.requestFullscreen) {
         document.documentElement.requestFullscreen();
       }
 
-      // ยิง confetti หลายชุด
-      bigConfettiBurst();
-
-      // บังคับแนวนอน (แค่ใส่ class แจ้งเตือนถ้าเป็นแนวตั้ง)
+      // ถ้าแนวตั้ง → เตือนให้หมุนหน้าจอ
       if (window.innerHeight > window.innerWidth) {
         document.body.classList.add("force-landscape");
       }
-    }
-
-    function bigConfettiBurst() {
-      const duration = 1.5 * 1000;
-      const end = Date.now() + duration;
-
-      (function frame() {
-        confetti({
-          particleCount: 60,
-          spread: 140,
-          startVelocity: 50,
-          scalar: 1.4,
-          origin: { y: 0.6 }
-        });
-        if (Date.now() < end) {
-          requestAnimationFrame(frame);
-        }
-      })();
     }
   </script>
 </body>
